--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@wagmi/core": "^2.14.6",
-    "@web3modal/wagmi": "^4.2.3",
     "ethers": "^6.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
-    "viem": "^2.21.48",
-    "wagmi": "^2.12.33",
-    "web-vitals": "^2.1.4",
-    "web3modal": "^1.9.12"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
